<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Arabic TTS</string>
    <string name="subtitle">Bilingual Text-to-Speech\nتحويل النص إلى كلام</string>
    <string name="download_prompt">Voice models need to be downloaded (~120 MB)\nيجب تحميل نماذج الصوت</string>
    <string name="download_models">Download Models\nتحميل النماذج</string>
    <string name="input_hint">Enter text in Arabic or English\nأدخل النص بالعربية أو الإنجليزية</string>
    <string name="speak">Speak / تحدث</string>
    <string name="stop">Stop</string>
    <string name="speed">Speed:</string>
    <string name="try_samples">Try a sample:</string>
    <string name="custom_voice_title">Arabic Voice / الصوت العربي</string>
    <string name="custom_voice_none">Default: Kareem (Jordanian) / الافتراضي: كريم</string>
    <string name="custom_voice_active">Custom voice loaded / تم تحميل صوت مخصص</string>
    <string name="download_voice">Download Voice / تحميل صوت</string>
    <string name="remove_voice">Remove / إزالة</string>
    <string name="hint_onnx_url">.onnx model URL</string>
    <string name="hint_config_url">.onnx.json config URL</string>
    <string name="error_empty_urls">Please paste both .onnx and .onnx.json URLs</string>
    <string name="downloading_voice">Downloading custom voice…</string>
</resources>
